[project]
name = "ride-doctor"
version = "0.1.0"
description = "RideDoctor - Bike Service Center"
authors = [{ name = "Keys (Shangar)", email = "shangar202000@gmail.com" }]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
